--- a/resources/sass/pages/home.scss
+++ b/resources/sass/pages/home.scss
@@ -15,7 +15,7 @@
 .home__row--map {
     text-align: center;
     @include media('screen-small') {
-        background-image: none;
+        // background-image: none;
     }
 }
 
